[workspace]
resolver = "2"
members = [
  "robusta-term",
  "robusta-core",
  "robusta-gui",
  "robusta_bevy_egui",
  "robusta-dxf",
]

default-members = ["robusta-term"]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[profile.integration]
inherits = "test"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Zi Hao L. <https://github.com/CarbonFlora>"]
categories = ["editor"]
repository = "https://github.com/CarbonFlora/robusta"
homepage = ""
license = "MPL-2.0"
rust-version = "1.75"
