[package]
name = "robusta-2d"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robusta-gui = { path = "../robusta-gui" }

bevy = { version = "0.12.1", features = ["dynamic_linking"] } #todo!() when releasing officially, remove dynamic linking.
bevy_pancam = "0.10.0"
bevy-inspector-egui = "0.22.1"
bevy_egui = { version = "0.24.0", features = ["serde"] }
bevy_mod_picking = { version = "0.17.0", features = ["backend_egui"] }
