[package]
name = "robusta-dxf"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robusta-core = { path = "../robusta-core" }

dxf = { git = "https://github.com/ixmilia/dxf-rs.git" }
# dxf = { version = "0.5.0", features = ["serialize"] }
anyhow = "1.0.79"
