[package]
name = "robusta-exp"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# robusta-2d = { path = "../robusta-2d" }
robusta-core = { path = "../robusta-core" }
robusta-dxf = { path = "../robusta-dxf" }
robusta-gui = { path = "../robusta-gui" }
bevy_egui = { path = "../robusta_bevy_egui", features = ["immutable_ctx"] }

bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_window = { version = "0.12.1", features = ["serialize"] }
egui = { version = "0.25.0", features = ["serde"] }
egui_dock = { version = "0.10.0", features = ["serde"] }
bevy_asset = { version = "0.12.1", features = ["multi-threaded"] }
bevy_reflect = "0.12.1"
bevy_pancam = { version = "0.10.0", features = ["bevy_egui"] }
dxf = { git = "https://github.com/ixmilia/dxf-rs.git" }
anyhow = "1.0.79"
approx = "0.5.1"
nalgebra = { version = "0.32.3", features = ["serde"] }
bevy-inspector-egui = "0.22.1"
# bevy_mod_picking = { version = "0.17.0", features = ["backend_egui", "selection", "bevy_picking_raycast"] }
bevy_framepace = "0.14.1"
