[package]
name = "robusta-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = [
    "dynamic_linking",
] } #todo!() when releasing officially, remove dynamic linking.
bevy_window = { version = "0.13.0", features = ["serialize"] }
bevy_asset = { version = "0.13.0", features = ["multi-threaded"] }
bevy_reflect = "0.13.0"
bevy_framepace = "0.15.0"
bevy_mod_picking = { version = "0.18.0", features = ["backend_egui", "selection", "bevy_picking_raycast"] }
bevy_pancam = "0.11.0"
bevy-inspector-egui = "0.23.3"
bevy_egui = { version = "0.25.0", features = ["immutable_ctx"] }

egui = { version = "0.26.2", features = ["serde"] }
egui_dock = { version = "0.11.2", features = ["serde"] }
dxf = { git = "https://github.com/ixmilia/dxf-rs.git" }
anyhow = "1.0.79"
approx = "0.5.1"
bevy_render = "0.13.0"
nalgebra = { version = "0.32.3", features = ["serde"] }
thiserror = "1.0.58"
