[package]
name = "robusta-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "lines"

[[example]]
name = "lines2"

[[example]]
name = "arcs_circles"

[[example]]
name = "circles"

[dependencies]
robusta-core = { path = "../robusta-core" }
robusta-gui = { path = "../robusta-gui" }

anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
clap_complete = "4.4.6"
# serde = "1.0.195"
